Revamp serial number search tool UI and functionality
Updated the HTML structure, styles, and search functionality for the serial number search tool. Added English translations and improved the user interface.

--- a/index.html
+++ b/index.html
@@ -1,183 +1,285 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>시리얼 넘버 검색기</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>시리얼 넘버 검색기 | Serial Number Search</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      font-family: "Pretendard", Arial, sans-serif;
-      background: linear-gradient(180deg, #0b1220, #05070d);
-      color: #fff;
-      padding: 30px;
-    }
+<style>
+:root {
+  --bg:#0b1020;
+  --card:#111a33;
+  --line:#23305a;
+  --text:#eaf0ff;
+  --muted:#9aa7c2;
+  --accent:#38bdf8;
+  --danger:#fb7185;
+}
 
-    .wrap {
-      max-width: 820px;
-      margin: auto;
-    }
+* { box-sizing:border-box; }
 
-    h1 {
-      margin-bottom: 8px;
-    }
+body {
+  margin:0;
+  background:linear-gradient(180deg,#0b1020,#05070d);
+  font-family: "Pretendard","Noto Sans KR",system-ui,Arial,sans-serif;
+  color:var(--text);
+}
 
-    .desc {
-      color: #9aa4b2;
-      font-size: 14px;
-      margin-bottom: 20px;
-    }
+.wrapper {
+  max-width: 900px;
+  margin: auto;
+  padding: 32px 16px 80px;
+}
 
-    .search-box {
-      display: flex;
-      gap: 10px;
-    }
+header h1 {
+  margin:0;
+  font-size:26px;
+  letter-spacing:-0.3px;
+}
 
-    input {
-      flex: 1;
-      padding: 14px;
-      font-size: 16px;
-      border-radius: 10px;
-      border: none;
-      outline: none;
-    }
+header p {
+  margin:8px 0 24px;
+  color:var(--muted);
+  font-size:14px;
+  line-height:1.5;
+}
 
-    button {
-      padding: 14px 18px;
-      border-radius: 10px;
-      border: none;
-      cursor: pointer;
-      font-size: 15px;
-      background: #2563eb;
-      color: white;
-    }
+.search-box {
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
 
-    button.reset {
-      background: #374151;
-    }
+.search-box input {
+  flex:1;
+  min-width:240px;
+  padding:14px 16px;
+  border-radius:12px;
+  border:1px solid var(--line);
+  background:#070a14;
+  color:var(--text);
+  font-size:16px;
+}
 
-    .result {
-      margin-top: 24px;
-      padding: 18px;
-      border-radius: 12px;
-      background: #0f172a;
-      border: 1px solid #1e293b;
-      white-space: pre-line;
-    }
+.search-box button {
+  padding:14px 18px;
+  border-radius:12px;
+  border:1px solid var(--accent);
+  background:rgba(56,189,248,.15);
+  color:var(--text);
+  font-weight:700;
+  cursor:pointer;
+}
 
-    .error {
-      color: #f87171;
-    }
+.search-box button.reset {
+  border-color:#374151;
+  background:#1f2937;
+}
 
-    .success {
-      color: #a7f3d0;
-    }
-  </style>
+.notice {
+  margin-top:14px;
+  font-size:13px;
+  color:var(--muted);
+}
+
+.result-area {
+  margin-top:28px;
+}
+
+.card {
+  background:var(--card);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:18px;
+  margin-bottom:16px;
+}
+
+.card h2 {
+  margin:0 0 14px;
+  font-size:16px;
+  display:flex;
+  gap:8px;
+  align-items:center;
+}
+
+.tag {
+  font-size:11px;
+  padding:4px 10px;
+  border-radius:999px;
+  border:1px solid var(--accent);
+  color:var(--accent);
+}
+
+.row {
+  display:grid;
+  grid-template-columns: 170px 1fr;
+  gap:8px 12px;
+  margin-bottom:10px;
+  font-size:14px;
+}
+
+.label {
+  color:var(--muted);
+}
+
+.value {
+  white-space:pre-wrap;
+  word-break:break-word;
+}
+
+.spec {
+  margin-top:14px;
+  padding-top:12px;
+  border-top:1px dashed var(--line);
+  font-size:14px;
+}
+
+.empty {
+  padding:20px;
+  border-radius:14px;
+  border:1px dashed var(--line);
+  color:var(--danger);
+  font-size:14px;
+}
+
+footer {
+  margin-top:40px;
+  font-size:12px;
+  color:var(--muted);
+  text-align:center;
+}
+
+@media (max-width:520px){
+  .row { grid-template-columns:1fr; }
+}
+</style>
 </head>
 
 <body>
-  <div class="wrap">
-    <h1>시리얼 넘버 검색기</h1>
-    <div class="desc">
-      구형 / 신형 시트를 통합 검색합니다.<br>
-      시리얼에 영문이 포함되어도 자동 제거 후 검색합니다.
-    </div>
+<div class="wrapper">
 
-    <div class="search-box">
-      <input id="serialInput" placeholder="예: DM15D2203104" />
-      <button onclick="search()">검색</button>
-      <button class="reset" onclick="resetForm()">초기화</button>
-    </div>
+<header>
+  <h1>시리얼 넘버 검색기 (Serial Number Search)</h1>
+  <p>
+    구형 / 신형 시트를 통합 검색합니다.<br>
+    Search across legacy and current sheets.  
+    Alphabet characters in serial numbers are automatically ignored.
+  </p>
+</header>
 
-    <div id="result" class="result"></div>
-  </div>
+<section class="search-box">
+  <input id="serialInput" placeholder="예: DM15B2203104 / DM152203104">
+  <button onclick="search()">검색 (Search)</button>
+  <button class="reset" onclick="resetForm()">초기화 (Reset)</button>
+</section>
+
+<div class="notice">
+  • 영문 자동 제거 (Alphabet ignored) &nbsp; • 콤마 시리얼 지원 (Comma supported)
+</div>
+
+<section id="result" class="result-area"></section>
+
+<footer>
+  © SEDNAENG · Internal Serial Search Tool
+</footer>
+
+</div>
 
 <script>
-/************** 설정 **************/
+/* ================= 설정 ================= */
 const SPREADSHEET_ID = "1S6NfRpDYdBJgnfdweINyqVs_NQhZi-T2uOABSx_3JnU";
-const TARGET_SHEETS = ["구형", "신형"];
+const SHEETS = ["구형","신형"];
 
-/************** 유틸 **************/
-function normalizeSerial(v) {
-  return v
-    .toUpperCase()
-    .replace(/[A-Z]/g, "") // 영문 제거
-    .replace(/\s+/g, "")
-    .trim();
+/* RAW_ALL QUERY 컬럼 순서
+0 업체명 | 1 W/P | 2 납품일 | 3 사양 | 4 모델명 | 5 시리얼
+*/
+const COL = {
+  company:0,
+  wp:1,
+  delivery:2,
+  spec:3,
+  model:4,
+  serial:5
+};
+
+/* ================= 유틸 ================= */
+function normalize(v){
+  return v.toUpperCase().replace(/[A-Z]/g,"").replace(/\s+/g,"").trim();
 }
 
-/************** 검색 **************/
-async function search() {
+/* ================= 검색 ================= */
+async function search(){
   const input = document.getElementById("serialInput").value;
   const resultBox = document.getElementById("result");
+  resultBox.innerHTML = "";
 
-  if (!input) {
-    resultBox.innerHTML = `<span class="error">⚠ 시리얼 넘버를 입력하세요.</span>`;
+  if(!input){
+    resultBox.innerHTML = `<div class="empty">⚠ 시리얼 넘버를 입력하세요.</div>`;
     return;
   }
 
-  const keyword = normalizeSerial(input);
-  let results = [];
+  const key = normalize(input);
+  let hits = [];
 
-  try {
-    for (const sheet of TARGET_SHEETS) {
-      const url =
-        `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?` +
-        `sheet=${encodeURIComponent(sheet)}&tqx=out:json`;
+  try{
+    for(const sheet of SHEETS){
+      const url = `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${sheet}&tqx=out:json`;
+      const txt = await fetch(url).then(r=>r.text());
+      const json = JSON.parse(txt.substring(txt.indexOf("{"),txt.lastIndexOf("}")+1));
+      const rows = json.table.rows || [];
 
-      const text = await fetch(url).then(r => r.text());
-
-      // GViz JSONP 껍데기 제거
-      const json = JSON.parse(
-        text.substring(text.indexOf("{"), text.lastIndexOf("}") + 1)
-      );
-
-      const rows = json.table.rows;
-
-      rows.forEach(r => {
-        const serialCell = r.c[17]?.v; // R열
-        if (!serialCell) return;
-
-        const serials = serialCell
-          .split(",")
-          .map(s => normalizeSerial(s));
-
-        if (serials.includes(keyword)) {
-          results.push({
-            company: r.c[3]?.v || "-",
-            wpDate: r.c[5]?.v || "-",
-            delivery: r.c[7]?.v || "-",
-            spec: r.c[11]?.v || "-"
-          });
-        }
+      rows.forEach(r=>{
+        const row = r.c.map(c=>c?c.v:"");
+        const serials = row[COL.serial]?.split(",").map(s=>normalize(s));
+        if(serials?.includes(key)) hits.push(row);
       });
     }
 
-    if (results.length === 0) {
-      resultBox.innerHTML = `<span class="error">❌ '${input}' 검색 결과가 없습니다.</span>`;
+    if(hits.length===0){
+      resultBox.innerHTML = `<div class="empty">❌ '${input}' 검색 결과가 없습니다.</div>`;
       return;
     }
 
-    resultBox.innerHTML =
-      `<div class="success">🔎 요청하신 '${input}' 검색결과</div>\n\n` +
-      results.map(r => `
-🏢 업체명 : ${r.company}
-📦 W/P 납품일 : ${r.wpDate}
-🚚 납품일 : ${r.delivery}
-🛠 프로젝트 사양 :
-${r.spec}
-────────────────────
-      `).join("\n");
+    hits.forEach(row=>{
+      resultBox.innerHTML += `
+      <div class="card">
+        <h2>🔎 검색 결과 <span class="tag">MATCH</span></h2>
 
-  } catch (e) {
-    resultBox.innerHTML =
-      `<span class="error">❌ 데이터 로드 실패<br>${e.message}</span>`;
+        <div class="row">
+          <div class="label">모델명 (Model)</div>
+          <div class="value">${row[COL.model]||"-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">업체명 (Company)</div>
+          <div class="value">${row[COL.company]||"-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">W/P 납품일 (W/P Delivery)</div>
+          <div class="value">${row[COL.wp]||"-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">납품일 (Delivery Date)</div>
+          <div class="value">${row[COL.delivery]||"-"}</div>
+        </div>
+
+        <div class="spec">
+          <b>프로젝트 사양 (Project Specification)</b>
+          <pre>${row[COL.spec]||"-"}</pre>
+        </div>
+      </div>`;
+    });
+
+  }catch(e){
+    resultBox.innerHTML = `<div class="empty">❌ 데이터 로드 실패</div>`;
   }
 }
 
-function resetForm() {
-  document.getElementById("serialInput").value = "";
-  document.getElementById("result").innerHTML = "";
+function resetForm(){
+  document.getElementById("serialInput").value="";
+  document.getElementById("result").innerHTML="";
 }
 </script>
 
