--- a/index.html
+++ b/index.html
@@ -1,209 +1,160 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>시리얼 넘버 검색기 (Serial Number Search)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <style>
-    * { box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif; }
-    body {
-      margin: 0;
-      background: radial-gradient(circle at top, #1a2a4f, #050b1c);
-      color: #fff;
-    }
-    .container {
-      max-width: 900px;
-      margin: 80px auto;
-      padding: 40px;
-    }
-    h1 {
-      margin: 0 0 8px;
-      font-size: 32px;
-    }
-    .sub {
-      color: #b8c3ff;
-      margin-bottom: 30px;
-    }
-    .search-box {
-      display: flex;
-      gap: 10px;
-    }
-    input {
-      flex: 1;
-      padding: 14px 16px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-    }
-    button {
-      padding: 14px 20px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      font-size: 15px;
-    }
-    .btn-search {
-      background: #2563eb;
-      color: #fff;
-    }
-    .btn-reset {
-      background: #374151;
-      color: #fff;
-    }
-    .hint {
-      margin-top: 12px;
-      font-size: 13px;
-      color: #9ca3af;
-    }
-    .result {
-      margin-top: 30px;
-      padding: 24px;
-      background: rgba(255,255,255,0.05);
-      border-radius: 12px;
-      white-space: pre-wrap;
-      line-height: 1.6;
-    }
-    .error {
-      color: #ff6b6b;
-    }
-    footer {
-      margin-top: 60px;
-      text-align: center;
-      font-size: 13px;
-      color: #9ca3af;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>시리얼 넘버 검색기 (Serial Number Search)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: radial-gradient(circle at top, #0f172a, #020617);
+  color: #e5e7eb;
+  margin: 0;
+  padding: 40px 16px;
+}
+.container {
+  max-width: 900px;
+  margin: auto;
+}
+h1 {
+  font-size: 28px;
+  margin-bottom: 8px;
+}
+.subtitle {
+  color: #9ca3af;
+  margin-bottom: 24px;
+}
+.search-box {
+  display: flex;
+  gap: 8px;
+}
+input {
+  flex: 1;
+  padding: 14px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: none;
+}
+button {
+  padding: 14px 20px;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+.search-btn {
+  background: #2563eb;
+  color: white;
+}
+.reset-btn {
+  background: #374151;
+  color: white;
+}
+.result {
+  margin-top: 24px;
+  padding: 20px;
+  background: #020617;
+  border: 1px solid #1e293b;
+  border-radius: 12px;
+}
+.error {
+  color: #f87171;
+}
+.item {
+  margin-bottom: 20px;
+  line-height: 1.6;
+}
+.footer {
+  margin-top: 40px;
+  text-align: center;
+  color: #64748b;
+  font-size: 13px;
+}
+</style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>시리얼 넘버 검색기 (Serial Number Search)</h1>
-    <div class="sub">
-      구형 / 신형 통합 데이터 검색<br>
-      Alphabet characters in serial numbers are automatically ignored.
-    </div>
-
-    <div class="search-box">
-      <input id="keyword" placeholder="예: RF152511004, DM152203104" />
-      <button class="btn-search" onclick="search()">검색 (Search)</button>
-      <button class="btn-reset" onclick="reset()">초기화 (Reset)</button>
-    </div>
-
-    <div class="hint">
-      • 영문 자동 제거 (Alphabet ignored)<br>
-      • 콤마 시리얼 지원 (Comma supported)
-    </div>
-
-    <div id="result" class="result"></div>
-
-    <footer>
-      © SEDNAENG · Internal Serial Search Tool
-    </footer>
+<div class="container">
+  <h1>시리얼 넘버 검색기 (Serial Number Search)</h1>
+  <div class="subtitle">
+    구형 / 신형 데이터를 통합 검색합니다.  
+    영문은 자동 제거되며 콤마 시리얼을 지원합니다.
   </div>
 
+  <div class="search-box">
+    <input id="serialInput" placeholder="예: RF152511004" />
+    <button class="search-btn" onclick="searchSerial()">검색</button>
+    <button class="reset-btn" onclick="resetAll()">초기화</button>
+  </div>
+
+  <div id="result" class="result"></div>
+
+  <div class="footer">© SEDNAENG · Internal Serial Search Tool</div>
+</div>
+
 <script>
-/* ===========================
-   🔧 환경 설정
-=========================== */
 const SPREADSHEET_ID = "1S6NfRpDYdBJgnfdweINyqVs_NQhZi-T2uOABSx_3JnU";
 const SHEET_NAME = "RAW_ALL";
 
-/* RAW_ALL 컬럼 구조
-A 업체명
-B W/P 납품일
-C 납품일
-D 프로젝트
-E 모델명
-F S/N
-*/
-const COL = {
-  company: 0,
-  wp: 1,
-  delivery: 2,
-  project: 3,
-  model: 4,
-  serial: 5
-};
-
-/* ===========================
-   🔎 유틸
-=========================== */
 function normalizeSerial(v) {
-  return String(v || "")
-    .toUpperCase()
-    .replace(/[A-Z]/g, "")
-    .replace(/\s+/g, "");
+  return v
+    ? v.toString().toUpperCase().replace(/[A-Z]/g, "").replace(/\s+/g, "")
+    : "";
 }
 
-/* ===========================
-   🔍 검색
-=========================== */
-async function search() {
-  const input = document.getElementById("keyword").value.trim();
-  const resultBox = document.getElementById("result");
+function resetAll() {
+  document.getElementById("serialInput").value = "";
+  document.getElementById("result").innerHTML = "";
+}
 
-  if (!input) {
-    resultBox.innerHTML = "<span class='error'>⚠ 시리얼 넘버를 입력하세요.</span>";
+async function searchSerial() {
+  const input = document.getElementById("serialInput").value;
+  const key = normalizeSerial(input);
+
+  if (!key) {
+    document.getElementById("result").innerHTML =
+      "<div class='error'>시리얼 넘버를 입력하세요.</div>";
     return;
   }
 
-  const target = normalizeSerial(input);
+  const url =
+    `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(SHEET_NAME)}&tqx=out:json`;
 
   try {
-    const url =
-      `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(SHEET_NAME)}&tqx=out:json`;
     const res = await fetch(url);
     const text = await res.text();
     const json = JSON.parse(text.substring(47).slice(0, -2));
     const rows = json.table.rows;
 
-    let hits = [];
+    let found = [];
 
     rows.forEach(r => {
-      if (!r.c || !r.c[COL.serial]) return;
+      const c = r.c.map(v => v ? v.v : "");
+      const serials = c[5].toString().split(",").map(normalizeSerial);
 
-      const serials = String(r.c[COL.serial].v || "")
-        .split(",")
-        .map(s => normalizeSerial(s));
-
-      if (serials.includes(target)) {
-        hits.push({
-          company: r.c[COL.company]?.v || "-",
-          wp: r.c[COL.wp]?.v || "-",
-          delivery: r.c[COL.delivery]?.v || "-",
-          project: r.c[COL.project]?.v || "-",
-          model: r.c[COL.model]?.v || "-"
-        });
+      if (serials.includes(key)) {
+        found.push(`
+          <div class="item">
+            <b>업체명 (Company)</b>: ${c[0]}<br/>
+            <b>모델명 (Model)</b>: ${c[4]}<br/>
+            <b>W/P 납품일 (W/P Date)</b>: ${c[1]}<br/>
+            <b>납품일 (Delivery Date)</b>: ${c[2]}<br/>
+            <b>프로젝트 (Project)</b>:<br/>${c[3]}<br/>
+            <b>S/N</b>: ${c[5]}
+          </div>
+        `);
       }
     });
 
-    if (!hits.length) {
-      resultBox.innerHTML = `<span class="error">❌ '${input}' 검색 결과가 없습니다.</span>`;
-      return;
-    }
-
-    resultBox.innerHTML = hits.map((h, i) => `
-📌 요청하신 '${input}' 검색 결과 (${i + 1})
-────────────────────
-🏢 업체명 (Company) : ${h.company}
-📦 W/P 납품일 (W/P Date) : ${h.wp}
-🚚 납품일 (Delivery Date) : ${h.delivery}
-📦 모델명 (Model) : ${h.model}
-🛠 프로젝트 사양 (Project) :
-${h.project}
-────────────────────
-`).join("\n");
+    document.getElementById("result").innerHTML =
+      found.length
+        ? `<b>요청하신 '${input}' 검색 결과</b><hr/>${found.join("")}`
+        : `<div class="error">'${input}' 검색 결과가 없습니다.</div>`;
 
   } catch (e) {
-    resultBox.innerHTML = "<span class='error'>❌ 데이터 로드 실패 (시트 공유/ID 확인)</span>";
+    document.getElementById("result").innerHTML =
+      "<div class='error'>데이터 로드 실패 (시트 공개 여부 확인)</div>";
   }
-}
-
-function reset() {
-  document.getElementById("keyword").value = "";
-  document.getElementById("result").innerHTML = "";
 }
 </script>
 </body>
