--- a/index.html
+++ b/index.html
@@ -1,161 +1,181 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
-<title>시리얼 넘버 검색기 (Serial Number Search)</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: radial-gradient(circle at top, #0f172a, #020617);
-  color: #e5e7eb;
-  margin: 0;
-  padding: 40px 16px;
-}
-.container {
-  max-width: 900px;
-  margin: auto;
-}
-h1 {
-  font-size: 28px;
-  margin-bottom: 8px;
-}
-.subtitle {
-  color: #9ca3af;
-  margin-bottom: 24px;
-}
-.search-box {
-  display: flex;
-  gap: 8px;
-}
-input {
-  flex: 1;
-  padding: 14px;
-  font-size: 16px;
-  border-radius: 8px;
-  border: none;
-}
-button {
-  padding: 14px 20px;
-  border-radius: 8px;
-  border: none;
-  font-size: 16px;
-  cursor: pointer;
-}
-.search-btn {
-  background: #2563eb;
-  color: white;
-}
-.reset-btn {
-  background: #374151;
-  color: white;
-}
-.result {
-  margin-top: 24px;
-  padding: 20px;
-  background: #020617;
-  border: 1px solid #1e293b;
-  border-radius: 12px;
-}
-.error {
-  color: #f87171;
-}
-.item {
-  margin-bottom: 20px;
-  line-height: 1.6;
-}
-.footer {
-  margin-top: 40px;
-  text-align: center;
-  color: #64748b;
-  font-size: 13px;
-}
-</style>
-</head>
+  <meta charset="UTF-8" />
+  <title>시리얼 넘버 검색기 (Serial Number Search)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: linear-gradient(180deg, #0b1220, #020617);
+      color: #e5e7eb;
+    }
+    .container {
+      max-width: 900px;
+      margin: 60px auto;
+      padding: 30px;
+    }
+    h1 {
+      margin-bottom: 6px;
+    }
+    .subtitle {
+      color: #9ca3af;
+      margin-bottom: 30px;
+    }
+    .search-box {
+      display: flex;
+      gap: 10px;
+    }
+    input {
+      flex: 1;
+      padding: 14px;
+      border-radius: 10px;
+      border: none;
+      font-size: 16px;
+    }
+    button {
+      padding: 14px 20px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      font-size: 15px;
+      background: #2563eb;
+      color: white;
+    }
+    button.reset {
+      background: #374151;
+    }
+    .result {
+      margin-top: 30px;
+      padding: 20px;
+      background: rgba(255,255,255,0.05);
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.1);
+    }
+    .error {
+      color: #f87171;
+    }
+    .item {
+      margin-top: 12px;
+      line-height: 1.6;
+    }
+    .label {
+      color: #93c5fd;
+      font-weight: bold;
+    }
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      color: #6b7280;
+      font-size: 13px;
+    }
+  </style>
+</head>
 <body>
+
 <div class="container">
   <h1>시리얼 넘버 검색기 (Serial Number Search)</h1>
   <div class="subtitle">
     구형 / 신형 데이터를 통합 검색합니다.  
-    영문은 자동 제거되며 콤마 시리얼을 지원합니다.
+    영문자는 자동 제거 후 검색됩니다.
   </div>
 
   <div class="search-box">
-    <input id="serialInput" placeholder="예: RF152511004" />
-    <button class="search-btn" onclick="searchSerial()">검색</button>
-    <button class="reset-btn" onclick="resetAll()">초기화</button>
+    <input id="serialInput" placeholder="예: DM152308230" />
+    <button onclick="search()">검색 (Search)</button>
+    <button class="reset" onclick="resetSearch()">초기화</button>
   </div>
 
-  <div id="result" class="result"></div>
+  <div id="result"></div>
 
-  <div class="footer">© SEDNAENG · Internal Serial Search Tool</div>
+  <footer>
+    © SEDNAENG · Internal Serial Search Tool
+  </footer>
 </div>
 
 <script>
-const SPREADSHEET_ID = "1S6NfRpDYdBJgnfdweINyqVs_NQhZi-T2uOABSx_3JnU";
-const SHEET_NAME = "RAW_ALL";
+  // 🔴 여기에 너 스프레드시트 ID 그대로 유지
+  const SHEET_ID = "1S6NfRpDYdBJgnfdweINyqVs_NQhZi-T2uOABSx_3JnU";
+  const SHEET_NAME = "RAW_ALL";
 
-function normalizeSerial(v) {
-  return v
-    ? v.toString().toUpperCase().replace(/[A-Z]/g, "").replace(/\s+/g, "")
-    : "";
-}
+  const DATA_URL =
+    `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?sheet=${SHEET_NAME}`;
 
-function resetAll() {
-  document.getElementById("serialInput").value = "";
-  document.getElementById("result").innerHTML = "";
-}
-
-async function searchSerial() {
-  const input = document.getElementById("serialInput").value;
-  const key = normalizeSerial(input);
-
-  if (!key) {
-    document.getElementById("result").innerHTML =
-      "<div class='error'>시리얼 넘버를 입력하세요.</div>";
-    return;
+  function normalizeSerial(v) {
+    return v
+      .toString()
+      .toUpperCase()
+      .replace(/[A-Z]/g, "")
+      .replace(/\s+/g, "");
   }
 
-  const url =
-    `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(SHEET_NAME)}&tqx=out:json`;
+  async function search() {
+    const input = document.getElementById("serialInput").value.trim();
+    const resultBox = document.getElementById("result");
+    resultBox.innerHTML = "";
 
-  try {
-    const res = await fetch(url);
-    const text = await res.text();
-    const json = JSON.parse(text.substring(47).slice(0, -2));
-    const rows = json.table.rows;
+    if (!input) return;
 
-    let found = [];
+    const keyword = normalizeSerial(input);
 
-    rows.forEach(r => {
-      const c = r.c.map(v => v ? v.v : "");
-      const serials = c[5].toString().split(",").map(normalizeSerial);
+    try {
+      const res = await fetch(DATA_URL);
+      const text = await res.text();
+      const json = JSON.parse(text.substring(47, text.length - 2));
 
-      if (serials.includes(key)) {
-        found.push(`
-          <div class="item">
-            <b>업체명 (Company)</b>: ${c[0]}<br/>
-            <b>모델명 (Model)</b>: ${c[4]}<br/>
-            <b>W/P 납품일 (W/P Date)</b>: ${c[1]}<br/>
-            <b>납품일 (Delivery Date)</b>: ${c[2]}<br/>
-            <b>프로젝트 (Project)</b>:<br/>${c[3]}<br/>
-            <b>S/N</b>: ${c[5]}
-          </div>
-        `);
+      const rows = json.table.rows;
+      const matches = [];
+
+      rows.forEach(r => {
+        const row = r.c.map(c => (c ? c.v : ""));
+        const serialCell = row[6]; // G열 S/N
+
+        if (!serialCell) return;
+
+        const serials = serialCell
+          .toString()
+          .split(",")
+          .map(s => normalizeSerial(s));
+
+        if (serials.includes(keyword)) {
+          matches.push(row);
+        }
+      });
+
+      if (matches.length === 0) {
+        resultBox.innerHTML =
+          `<div class="result error">❌ '${input}' 검색 결과가 없습니다.</div>`;
+        return;
       }
-    });
 
-    document.getElementById("result").innerHTML =
-      found.length
-        ? `<b>요청하신 '${input}' 검색 결과</b><hr/>${found.join("")}`
-        : `<div class="error">'${input}' 검색 결과가 없습니다.</div>`;
+      matches.forEach(row => {
+        resultBox.innerHTML += `
+          <div class="result">
+            <div class="item"><span class="label">업체명 (Company)</span> : ${row[0]}</div>
+            <div class="item"><span class="label">W/P 납품일</span> : ${row[1]}</div>
+            <div class="item"><span class="label">납품일</span> : ${row[2]}</div>
+            <div class="item"><span class="label">모델명 (Model)</span> : ${row[3]}</div>
+            <div class="item"><span class="label">납기수량 (Qty)</span> : ${row[4]}</div>
+            <div class="item"><span class="label">프로젝트 (Project)</span><br>${row[5]}</div>
+            <div class="item"><span class="label">S/N</span> : ${row[6]}</div>
+          </div>
+        `;
+      });
 
-  } catch (e) {
-    document.getElementById("result").innerHTML =
-      "<div class='error'>데이터 로드 실패 (시트 공개 여부 확인)</div>";
+    } catch (e) {
+      resultBox.innerHTML =
+        `<div class="result error">❌ 데이터 로드 실패 (Failed to fetch)</div>`;
+    }
   }
-}
+
+  function resetSearch() {
+    document.getElementById("serialInput").value = "";
+    document.getElementById("result").innerHTML = "";
+  }
 </script>
+
 </body>
 </html>
+
