--- a/index.html
+++ b/index.html
@@ -1,209 +1,295 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Serial Number Search</title>
+<meta charset="UTF-8">
+<title>시리얼 넘버 검색기 | Serial Number Search</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-  body {
-    margin: 0;
-    font-family: "Segoe UI", Arial, sans-serif;
-    background: radial-gradient(circle at top, #0f1c3a, #020617);
-    color: #e5e7eb;
-  }
+:root {
+  --bg:#0b1020;
+  --card:#111a33;
+  --line:#23305a;
+  --text:#eaf0ff;
+  --muted:#9aa7c2;
+  --accent:#38bdf8;
+  --danger:#fb7185;
+}
 
-  .container {
-    max-width: 920px;
-    margin: 80px auto;
-    padding: 0 20px;
-  }
+* { box-sizing:border-box; }
 
-  h1 {
-    font-size: 28px;
-    margin-bottom: 8px;
-  }
+body {
+  margin:0;
+  background:linear-gradient(180deg,#0b1020,#05070d);
+  font-family: "Pretendard","Noto Sans KR",system-ui,Arial,sans-serif;
+  color:var(--text);
+}
 
-  .subtitle {
-    color: #9ca3af;
-    font-size: 14px;
-    margin-bottom: 24px;
-  }
+.wrapper {
+  max-width: 900px;
+  margin: auto;
+  padding: 32px 16px 80px;
+}
 
-  .search-box {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 24px;
-  }
+header h1 {
+  margin:0;
+  font-size:26px;
+  letter-spacing:-0.3px;
+}
 
-  input {
-    flex: 1;
-    padding: 14px 16px;
-    border-radius: 10px;
-    border: none;
-    font-size: 16px;
-    outline: none;
-  }
+header p {
+  margin:8px 0 24px;
+  color:var(--muted);
+  font-size:14px;
+  line-height:1.5;
+}
 
-  button {
-    padding: 14px 18px;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 600;
-  }
+.search-box {
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
 
-  .btn-search {
-    background: #2563eb;
-    color: #fff;
-  }
+.search-box input {
+  flex:1;
+  min-width:240px;
+  padding:14px 16px;
+  border-radius:12px;
+  border:1px solid var(--line);
+  background:#070a14;
+  color:var(--text);
+  font-size:16px;
+}
 
-  .btn-reset {
-    background: #374151;
-    color: #e5e7eb;
-  }
+.search-box button {
+  padding:14px 18px;
+  border-radius:12px;
+  border:1px solid var(--accent);
+  background:rgba(56,189,248,.15);
+  color:var(--text);
+  font-weight:700;
+  cursor:pointer;
+}
 
-  .result {
-    background: rgba(15, 23, 42, 0.9);
-    border-radius: 14px;
-    padding: 20px;
-    border: 1px solid rgba(255,255,255,0.08);
-  }
+.search-box button.reset {
+  border-color:#374151;
+  background:#1f2937;
+}
 
-  .error {
-    color: #f87171;
-    font-weight: 600;
-  }
+.notice {
+  margin-top:14px;
+  font-size:13px;
+  color:var(--muted);
+}
 
-  .card {
-    border-left: 4px solid #2563eb;
-    padding-left: 16px;
-    margin-bottom: 18px;
-  }
+.result-area {
+  margin-top:28px;
+}
 
-  .row {
-    margin: 6px 0;
-    font-size: 14px;
-  }
+.card {
+  background:var(--card);
+  border:1px solid var(--line);
+  border-radius:18px;
+  padding:18px;
+  margin-bottom:16px;
+}
 
-  .label {
-    color: #93c5fd;
-    font-weight: 600;
-  }
+.card h2 {
+  margin:0 0 14px;
+  font-size:16px;
+  display:flex;
+  gap:8px;
+  align-items:center;
+}
 
-  footer {
-    text-align: center;
-    margin-top: 40px;
-    font-size: 12px;
-    color: #6b7280;
-  }
+.tag {
+  font-size:11px;
+  padding:4px 10px;
+  border-radius:999px;
+  border:1px solid var(--accent);
+  color:var(--accent);
+}
+
+.row {
+  display:grid;
+  grid-template-columns: 170px 1fr;
+  gap:8px 12px;
+  margin-bottom:10px;
+  font-size:14px;
+}
+
+.label {
+  color:var(--muted);
+}
+
+.value {
+  white-space:pre-wrap;
+  word-break:break-word;
+}
+
+.empty {
+  padding:20px;
+  border-radius:14px;
+  border:1px dashed var(--line);
+  color:var(--danger);
+  font-size:14px;
+}
+
+footer {
+  margin-top:40px;
+  font-size:12px;
+  color:var(--muted);
+  text-align:center;
+}
+
+@media (max-width:520px){
+  .row { grid-template-columns:1fr; }
+}
 </style>
 </head>
 
 <body>
-<div class="container">
+<div class="wrapper">
+
+<header>
   <h1>시리얼 넘버 검색기 (Serial Number Search)</h1>
-  <div class="subtitle">
-    RAW_ALL 시트를 기준으로 검색합니다.  
-    중간 영문 자동 제거 · 콤마 시리얼 지원
-  </div>
+  <p>
+    구형 / 신형 시트를 통합 검색합니다.<br>
+    Search across legacy and current sheets.  
+    Alphabet characters in serial numbers are automatically ignored.
+  </p>
+</header>
 
-  <div class="search-box">
-    <input id="serialInput" placeholder="예: SA15D2509268" />
-    <button class="btn-search" onclick="search()">검색</button>
-    <button class="btn-reset" onclick="resetAll()">초기화</button>
-  </div>
+<section class="search-box">
+  <input id="serialInput" placeholder="예: DM15B2203104 / DM152203104">
+  <button onclick="search()">검색 (Search)</button>
+  <button class="reset" onclick="resetForm()">초기화 (Reset)</button>
+</section>
 
-  <div id="output" class="result"></div>
+<div class="notice">
+  • 영문 자동 제거 (Alphabet ignored) &nbsp; • 콤마 시리얼 지원 (Comma supported)
+</div>
 
-  <footer>© SEDNAENG · Internal Serial Search Tool</footer>
+<section id="result" class="result-area"></section>
+
+<footer>
+  © SEDNAENG · Internal Serial Search Tool
+</footer>
+
 </div>
 
 <script>
-/* 🔧 네가 요구한 정확한 시리얼 정규화 */
-function normalizeSerial(v) {
-  if (!v) return "";
-  const s = v.toUpperCase().trim();
-  const prefixMatch = s.match(/^[A-Z]{1,2}/);
-  const prefix = prefixMatch ? prefixMatch[0] : "";
-  const rest = s.slice(prefix.length).replace(/[A-Z]/g, "");
-  return prefix + rest;
+/* ================= 설정 ================= */
+const SPREADSHEET_ID = "1S6NfRpDYdBJgnfdweINyqVs_NQhZi-T2uOABSx_3JnU";
+/* RAW_ALL에서 가져온 구형/신형 시트 이름 */
+const SHEETS = ["구형","신형"];
+
+/* RAW_ALL 컬럼 순서에 맞게 인덱스 꼭 확인해서 수정
+   예시는 다음 순서라고 가정:
+   0 업체명 | 1 W/P 납품일 | 2 납품일 | 3 납기 수량 | 4 프로젝트명 | 5 모델명 | 6 시리얼
+*/
+const COL = {
+  company: 0,   // 업체명
+  wp: 1,        // W/P 납품일
+  delivery: 2,  // 납품일
+  qty: 3,       // 납기 수량
+  project: 4,   // 프로젝트명
+  model: 5,     // 모델명
+  serial: 6     // 시리얼
+};
+
+/* ================= 유틸 ================= */
+/* 입력 시리얼에서 알파벳/공백 제거해서 통일 */
+function normalize(v){
+  return v.toUpperCase().replace(/[A-Z]/g,"").replace(/\s+/g,"").trim();
 }
 
-/* 🔗 RAW_ALL JSON URL (gid는 RAW_ALL 시트 gid) */
-const DATA_URL =
-  "https://docs.google.com/spreadsheets/d/1S6NfRpDYdBJgnfdweINyqVs_NQhZi-T2uOABSx_3JnU/gviz/tq?tqx=out:json&gid=333636994";
-
-let cachedRows = null;
-
-async function loadData() {
-  if (cachedRows) return cachedRows;
-
-  const res = await fetch(DATA_URL);
-  const text = await res.text();
-  const json = JSON.parse(text.substring(47, text.length - 2));
-  cachedRows = json.table.rows;
-  return cachedRows;
-}
-
-async function search() {
+/* ================= 검색 ================= */
+async function search(){
   const input = document.getElementById("serialInput").value;
-  const output = document.getElementById("output");
-  output.innerHTML = "";
+  const resultBox = document.getElementById("result");
+  resultBox.innerHTML = "";
 
-  if (!input) {
-    output.innerHTML = "<div class='error'>시리얼 넘버를 입력하세요.</div>";
+  if(!input){
+    resultBox.innerHTML = `<div class="empty">⚠ 시리얼 넘버를 입력하세요.</div>`;
     return;
   }
 
-  const key = normalizeSerial(input);
-  const rows = await loadData();
-  let found = [];
+  const key = normalize(input);
+  let hits = [];
 
-  rows.forEach(r => {
-    const snCell = r.c[6]?.v; // G열 S/N
-    if (!snCell) return;
+  try{
+    for(const sheet of SHEETS){
+      const url =
+        `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(sheet)}&tqx=out:json`;
+      const txt  = await fetch(url).then(r=>r.text());
+      const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}")+1));
+      const rows = json.table.rows || [];
 
-    const serials = snCell.split(",").map(s => normalizeSerial(s));
-    if (serials.includes(key)) {
-      found.push({
-        company: r.c[0]?.v || "-",
-        wp: r.c[1]?.v || "-",
-        delivery: r.c[2]?.v || "-",
-        model: r.c[3]?.v || "-",
-        qty: r.c[4]?.v || "-",
-        project: r.c[5]?.v || "-"
+      rows.forEach(r=>{
+        const row = r.c.map(c => c ? c.v : "");
+        const serials = (row[COL.serial] || "")
+          .toString()
+          .split(",")
+          .map(s => normalize(s));
+        if(serials.includes(key)) hits.push(row);
       });
     }
-  });
 
-  if (!found.length) {
-    output.innerHTML = `<div class="error">'${input}' 검색 결과가 없습니다.</div>`;
-    return;
-  }
+    if(hits.length === 0){
+      resultBox.innerHTML =
+        `<div class="empty">❌ '${input}' 검색 결과가 없습니다.</div>`;
+      return;
+    }
 
-  found.forEach((f, i) => {
-    output.innerHTML += `
+    hits.forEach(row=>{
+      resultBox.innerHTML += `
       <div class="card">
-        <div class="row"><span class="label">업체명:</span> ${f.company}</div>
-        <div class="row"><span class="label">W/P 납품일:</span> ${f.wp}</div>
-        <div class="row"><span class="label">제품 납품일:</span> ${f.delivery}</div>
-        <div class="row"><span class="label">모델명:</span> ${f.model}</div>
-        <div class="row"><span class="label">납기 수량:</span> ${f.qty}</div>
-        <div class="row"><span class="label">프로젝트:</span><br>${f.project}</div>
-      </div>
-    `;
-  });
+        <h2>🔎 검색 결과 <span class="tag">MATCH</span></h2>
+
+        <div class="row">
+          <div class="label">업체명</div>
+          <div class="value">${row[COL.company] || "-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">납품일</div>
+          <div class="value">${row[COL.delivery] || "-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">W/P 납품일</div>
+          <div class="value">${row[COL.wp] || "-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">모델명</div>
+          <div class="value">${row[COL.model] || "-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">납기 수량</div>
+          <div class="value">${row[COL.qty] || "-"}</div>
+        </div>
+
+        <div class="row">
+          <div class="label">프로젝트명</div>
+          <div class="value">${row[COL.project] || "-"}</div>
+        </div>
+      </div>`;
+    });
+
+  }catch(e){
+    console.error(e);
+    resultBox.innerHTML = `<div class="empty">❌ 데이터 로드 실패 (CORS, 공개 설정, 시트 이름 확인 필요)</div>`;
+  }
 }
 
-function resetAll() {
+function resetForm(){
   document.getElementById("serialInput").value = "";
-  document.getElementById("output").innerHTML = "";
+  document.getElementById("result").innerHTML = "";
 }
 </script>
+
 </body>
 </html>
-
-
-
