--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@ footer {
   <p>
     구형 / 신형 시트를 통합 검색합니다.<br>
     Search across legacy and current sheets.  
-    Alphabet characters in serial numbers are automatically ignored.
+    Alphabet characters in specific positions of serial numbers are automatically ignored.
   </p>
 </header>
 
 <section class="search-box">
-  <input id="serialInput" placeholder="예: DM15B2203104 / DM152203104">
+  <input id="serialInput" placeholder="예: RD20D2560002 / RD202560002">
   <button onclick="search()">검색 (Search)</button>
   <button class="reset" onclick="resetForm()">초기화 (Reset)</button>
 </section>
 
 <div class="notice">
-  • 영문 자동 제거 (Alphabet ignored) &nbsp; • 콤마 시리얼 지원 (Comma supported)
+  • 4번째·5번째 위치의 영문만 무시 &nbsp; • 콤마로 구분된 복수 S/N 지원
 </div>
 
 <section id="result" class="result-area"></section>
@@ -186,6 +186,7 @@ const SHEETS = ["구형","신형"];
 /*
 각 시트 컬럼(0부터 시작 인덱스)
 A:0 B:1 C:2 D:3 E:4 F:5 G:6 H:7 I:8 J:9 K:10 L:11 ... R:17
+
 D: 업체명
 F: W/P 납품일
 H: 제품 납품일
@@ -205,8 +206,30 @@ const COL = {
 };
 
 /* ================= 유틸 ================= */
-function normalize(v){
-  return v.toUpperCase().replace(/[A-Z]/g,"").replace(/\s+/g,"").trim();
+/**
+ * 시리얼 비교용 키 생성
+ * - 전체 문자열을 대문자/공백제거
+ * - 4번째·5번째 위치의 알파벳만 제거
+ *   RD20D2560002 -> RD202560002
+ *   RD20B2560002 -> RD202560002
+ *   RD202560002  -> RD202560002
+ *   SA20D2560002 -> SA202560002  (RD와 구분)
+ */
+function buildKey(raw){
+  if (!raw) return "";
+  let v = raw.toUpperCase().replace(/\s+/g, "").trim();
+  let result = "";
+
+  for (let i = 0; i < v.length; i++) {
+    const ch = v[i];
+    const pos = i + 1; // 1-based index
+
+    if ((pos === 4 || pos === 5) && /[A-Z]/.test(ch)) {
+      continue; // 4·5번째 알파벳만 스킵
+    }
+    result += ch;
+  }
+  return result;
 }
 
 /* ================= 검색 ================= */
@@ -220,13 +243,19 @@ async function search(){
     return;
   }
 
-  const key = normalize(input);
+  const key = buildKey(input);
+  if(!key){
+    resultBox.innerHTML = `<div class="empty">⚠ 유효한 시리얼 넘버가 아닙니다.</div>`;
+    return;
+  }
+
   let hits = [];
 
   try{
     for(const sheet of SHEETS){
-      const url = `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(sheet)}&tqx=out:json`;
-      const txt = await fetch(url).then(r=>r.text());
+      const url =
+        `https://docs.google.com/spreadsheets/d/${SPREADSHEET_ID}/gviz/tq?sheet=${encodeURIComponent(sheet)}&tqx=out:json`;
+      const txt  = await fetch(url).then(r=>r.text());
       const json = JSON.parse(txt.substring(txt.indexOf("{"), txt.lastIndexOf("}")+1));
       const rows = json.table.rows || [];
 
@@ -235,8 +264,10 @@ async function search(){
         const serials = (row[COL.serial] || "")
           .toString()
           .split(",")
-          .map(s => normalize(s));
-        if(serials.includes(key)){
+          .map(s => buildKey(s))
+          .filter(s => s);
+
+        if (serials.some(s => s === key)) {
           hits.push({sheet, row});
         }
       });
@@ -288,8 +319,8 @@ async function search(){
 
   }catch(e){
     console.error(e);
-    const resultBox = document.getElementById("result");
-    resultBox.innerHTML = `<div class="empty">❌ 데이터 로드 실패 (시트 공개 여부 / ID / 시트명 확인 필요)</div>`;
+    resultBox.innerHTML =
+      `<div class="empty">❌ 데이터 로드 실패 (시트 공개 여부 / ID / 시트명 확인 필요)</div>`;
   }
 }
 
